fix display bug

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         href="https://github.com/shandawang1005/CalendaMe_project">https://github.com/shandawang1005/CalendaMe_project</a>
                 </div>
                 <div>
-                    <h2><strong>Key Features Include:</strong></h2>
+                    <p><strong>Key Features Include:</strong></p>
 
                     <div class="project-feature">
                         <h4>Role-Based User Authentication</h4>
