fixing portifolio button position

--- a/index.html
+++ b/index.html
@@ -29,26 +29,31 @@
     </header>
 
     <section class="home" id="home">
-        <div class="home-content">
-            <h1>Hi, I'm Shanda Wang</h1>
-            <h3>Fullstack Developer</h3>
-            <p>As a passionate full-stack developer, I bring a unique combination of technical skills and business
-                acumen to the table. My journey from founding my own company to diving deep into software development
-                has equipped me with the ability to build innovative solutions that address real-world challenges. I'm
-                committed to delivering high-quality, scalable applications that meet both user needs and business
-                objectives.</p>
-            <div class="btn-box">
-                <a href="#contact">Hire Me</a>
-                <a href="https://www.linkedin.com/in/shanda-wang/">Let's Talk</a>
-                <a href="./download/Shanda Wang Resume.zip">Download CV</a>
+        <div class="home-container">
+            <div class="home-content">
+                <h1>Hi, I'm Shanda Wang</h1>
+                <h3>Fullstack Developer</h3>
+                <p>As a passionate full-stack developer, I bring a unique combination of technical skills and business
+                    acumen to the table. My journey from founding my own company to diving deep into software
+                    development
+                    has equipped me with the ability to build innovative solutions that address real-world challenges.
+                    I'm
+                    committed to delivering high-quality, scalable applications that meet both user needs and business
+                    objectives.</p>
+                <div class="btn-box">
+                    <a href="#contact">Hire Me</a>
+                    <a href="https://www.linkedin.com/in/shanda-wang/">Let's Talk</a>
+                    <a href="./download/Shanda Wang Resume.zip">Download CV</a>
+                </div>
             </div>
-        </div>
 
-        <div class="home-sci">
-            <a href="https://github.com/shandawang1005"><i class="bx bxl-github"></i></a>
-            <a href="https://www.linkedin.com/in/shanda-w-b3703a97/"><i class="bx bxl-linkedin"></i></a>
+            <div class="home-sci">
+                <a href="https://github.com/shandawang1005"><i class="bx bxl-github"></i></a>
+                <a href="https://www.linkedin.com/in/shanda-w-b3703a97/"><i class="bx bxl-linkedin"></i></a>
+            </div>
+            <span class="home-imgHover"></span>
+
         </div>
-        <span class="home-imgHover"></span>
     </section>
 
     <section class="about" id="about">
