updated newest resume

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
     <section class="about" id="about">
         <h2>About Me</h2>
-        <!-- <div class="about-content"> -->
-        </div>
         <div class="about-content">
             <p>I am a full-stack developer with a passion for creating interactive and responsive web applications. My
                 journey to becoming a software engineer has been unique and fulfilling.</p>
+        </div>
+        <div class="about-content">
             <div class="about-subsection">
                 <h3>My Story</h3>
                 <p>My journey began during the pandemic, when I co-founded <strong>DoraDream LLC</strong>, a company that quickly grew to over 5,000 users and generated over $1M in revenue in just eight months. As the project lead, I wasn’t just managing a team of interns and co-founders—I was in the trenches, coding and building the system that powered our business.</p>
